<resources>
    <string name="app_name">Timetable</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THURS</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="dt">Date/Time</string>
    <string name="am8">8:00</string>
    <string name="am9">9:00</string>
    <string name="am10">10:00</string>
    <string name="am11">11:00</string>
    <string name="am12">12:00</string>
    <string name="pm13">13:00</string>
    <string name="pm14">14:00</string>
    <string name="pm15">15:00</string>
    <string name="pm16">16:00</string>
    <string name="pm17">17:00</string>
    <string name="pm18">18:00</string>
    <string name="pm19">19:00</string>
    <string name="pm20">20:00</string>
    <string name="title1">CREATE TASK</string>
    <string name="topicCreate">CREATE EVENT</string>
    <string name="task">What is the Task?</string>
    <string name="explain">If you want to explain more ...</string>
    <string name="location">Location of the task</string>
    <string name="color">Random Color</string>
    <string name="pickColor">Select a color for the event</string>
    <string name="startTime">START TIME</string>
    <string name="fifnishTime">END TIME</string>
    <string name="createbtn">CREATE</string>

    <string name="title_activity_nav_bar">navBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_slideshow">Slideshow</string>

    <string name="home">Home</string>
    <string name="title">Timetable</string>
    <string name="dic">Dictionary</string>
    <string name="calc">Kids Calculator</string>
    <string name="contact">Contact Information</string>

    <string name="titleMaths">Maths</string>
    <string name="btncount">Count</string>
    <string name="btncalc">CALCULATION</string>
    <string name="btnNums">NUMBERS</string>
    <string name="counttext1">Count Red Stawberries</string>


</resources>