<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_baseline_timer_24"
            android:title="@string/title" />
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_baseline_font_download_24"
            android:title="@string/dic" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_baseline_calculate_24"
            android:title="@string/calc" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_perm_contact_calendar_24"
            android:title="@string/contact" />
    </group>
</menu>