<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:columnCount="1"
        android:rowCount="6"
        android:rowOrderPreserved="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/topic"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:hint="@string/topicCreate"
            android:paddingHorizontal="55dp"
            android:paddingVertical="20dp"
            android:text="@string/topicCreate"
            android:textColor="#03A9F4"
            android:textSize="40dp" />

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/event"
            android:layout_width="330dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/task"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/explain"
            android:layout_width="330dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/explain"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/location"
            android:layout_width="330dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/location"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="30dp"
        android:columnCount="5"
        android:rowCount="1"
        android:rowOrderPreserved="true"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnMon"
            android:layout_width="69dp"
            android:layout_marginTop="400dp"
            android:layout_marginRight="6dp"
            android:text="MON"
            android:textSize="10sp"
            app:backgroundTint="#9C27B0" />

        <Button
            android:id="@+id/btnTue"
            android:layout_width="69dp"
            android:layout_marginTop="400dp"
            android:layout_marginRight="6dp"
            android:text="TUE"
            android:textSize="10sp"
            app:backgroundTint="#8BC34A" />

        <Button
            android:id="@+id/btnWed"
            android:layout_width="69dp"
            android:layout_marginTop="400dp"
            android:layout_marginRight="6dp"
            android:text="WED"
            android:textSize="10sp"
            app:backgroundTint="#E91E63" />

        <Button
            android:id="@+id/btnThur"
            android:layout_width="72dp"
            android:layout_marginTop="400dp"
            android:layout_marginRight="6dp"
            android:text="THUR"
            android:textSize="10sp"
            app:backgroundTint="#FFEB3B" />

        <Button
            android:id="@+id/btnFri"
            android:layout_width="69dp"
            android:layout_marginTop="400dp"
            android:text="FRI"
            android:textSize="10sp"
            app:backgroundTint="#00BCD4" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="30dp"
        android:columnCount="5"
        android:rowCount="1"
        android:rowOrderPreserved="true"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnSat"
            android:layout_width="69dp"
            android:layout_marginTop="440dp"
            android:layout_marginRight="6dp"
            android:text="SAT"
            android:textSize="10sp"
            app:backgroundTint="#FF5722" />

        <Button
            android:id="@+id/btnSun"
            android:layout_width="69dp"
            android:layout_marginTop="440dp"
            android:text="SUN"
            android:textSize="10sp"
            app:backgroundTint="#673AB7" />


    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="30dp"
        android:columnCount="4"
        android:rowCount="1"
        android:rowOrderPreserved="true"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/stimetag"
            android:layout_width="100dp"
            android:layout_height="47dp"
            android:layout_marginTop="520dp"
            android:paddingVertical="12dp"
            android:text="@string/startTime"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/stime"
            android:layout_width="80dp"
            android:layout_height="47dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="520dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/am9"
            android:inputType="time"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <TextView
            android:id="@+id/etimetag"
            android:layout_width="80dp"
            android:layout_height="47dp"
            android:layout_marginTop="520dp"
            android:paddingVertical="12dp"
            android:text="@string/fifnishTime"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etime"
            android:layout_width="80dp"
            android:layout_height="47dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="520dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/am10"
            android:inputType="time" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="220dp"
        android:columnCount="1"
        android:rowCount="2"
        android:rowOrderPreserved="true"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_create"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="580dp"
            android:layout_marginBottom="40dp"
            android:hint="@string/createbtn"
            android:text="CREATE"
            android:textSize="10sp"
            app:backgroundTint="#3AB781" />

        <Button
            android:id="@+id/btn_read"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_marginTop="-45dp"
            android:layout_marginLeft="125dp"
            android:layout_marginBottom="140dp"
            android:text="View Events"
            android:textSize="10sp"
            app:backgroundTint="#3AB" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>